Fix buttons so they are not too big.

--- a/common/css/styles.css
+++ b/common/css/styles.css
@@ -4,6 +4,7 @@ body {
 
 	/* Display Size */
 	max-height: 100dvh;
+	min-width: 100dvw;
 	overflow: scroll;
 }
 
@@ -40,7 +41,10 @@ canvas {
 }
 
 #controls button {
-	padding: 5px;
+	padding: 5px 10px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 #controls-arrow {
